# OWL_NLP

./: Ontology_NLP.py  README.md  install_models.py  pyproject.toml  requirements.txt
